# test-package

./: README.md  pyproject.toml
.github/workflows/: opengl-test.yml  python-package.yml
src/: import_package.py  opengl_pic.py  osmesa.py  sphere.exf  two_element_cube.exf
tests/: test_import_package.py
